--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4"
   }
 }
